[gd_scene load_steps=10 format=3 uid="uid://u5d3ubsipudv"]

[ext_resource type="Script" uid="uid://dmnivsuhihk07" path="res://scenes/player/player.gd" id="1_dovo2"]
[ext_resource type="PackedScene" uid="uid://dvveaaryormi0" path="res://Utility/hurt_box.tscn" id="2_dovo2"]
[ext_resource type="Script" uid="uid://c36l8ka62p5mo" path="res://scenes/player/attack_manager.gd" id="3_gmlin"]
[ext_resource type="Script" uid="uid://cucnb8xya842u" path="res://managers/StatsManager.gd" id="7_qek5x"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dovo2"]
radius = 3.0
height = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_dovo2"]
radius = 400.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gmlin"]
size = Vector2(6, 14)

[sub_resource type="CircleShape2D" id="CircleShape2D_gmlin"]
radius = 50.0

[sub_resource type="CircleShape2D" id="CircleShape2D_lvxji"]
radius = 5.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
motion_mode = 1
script = ExtResource("1_dovo2")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 2)
shape = SubResource("CapsuleShape2D_dovo2")

[node name="AttackManager" type="Node2D" parent="."]
script = ExtResource("3_gmlin")

[node name="EnemyDetectionArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionArea"]
shape = SubResource("CircleShape2D_dovo2")

[node name="StatsManager" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("7_qek5x")

[node name="HurtBox" parent="StatsManager" instance=ExtResource("2_dovo2")]
collision_mask = 2

[node name="CollisionShape2D" parent="StatsManager/HurtBox" index="0"]
position = Vector2(1, 2)
shape = SubResource("RectangleShape2D_gmlin")

[node name="GrabArea" type="Area2D" parent="StatsManager"]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="StatsManager/GrabArea"]
shape = SubResource("CircleShape2D_gmlin")

[node name="CollectArea" type="Area2D" parent="StatsManager"]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="StatsManager/CollectArea"]
shape = SubResource("CircleShape2D_lvxji")

[connection signal="body_entered" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_entered"]
[connection signal="body_exited" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_exited"]
[connection signal="hurt" from="StatsManager/HurtBox" to="StatsManager" method="_on_hurt_box_hurt"]
[connection signal="area_entered" from="StatsManager/GrabArea" to="StatsManager" method="_on_grab_area_area_entered"]
[connection signal="area_entered" from="StatsManager/CollectArea" to="StatsManager" method="_on_collect_area_area_entered"]

[editable path="StatsManager/HurtBox"]
